Fix 1px footer gap on IOS safari

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -174,6 +174,7 @@ body {
 .layout {
   display: flex;
   flex-direction: row;
+  height: fit-content;
 }
 
 .page {
@@ -1283,7 +1284,7 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 3%;
+  padding: 3vh;
   background-color: var(--darker_red);
   color: var(--text_normal);
   gap: 50px;
